Add resume theme and update some minor values

--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -56,6 +56,7 @@
 @h2_color: @title_color;
 @h3_color: spin(@title_color, 20%);
 @h4_color: @h3_color;
+@h5_color: @h4_color;
 @quote_text_color: @dimmer_text_color;
 
 @banner_title_color: @title_color;
@@ -172,6 +173,7 @@
 @h2_font_size: 167%;
 @h3_font_size: 140%;
 @h4_font_size: 100%;
+@h5_font_size: 100%;
 @detail_font_size: 85%;
 @micro_font_size: 75%;
 
