--- a/site/resources/styles/core/fonts.less
+++ b/site/resources/styles/core/fonts.less
@@ -1,7 +1,6 @@
 @import "core-values";
 @import "font-size";
 
-h4,
 pre,
 .button,
 .menu
@@ -25,7 +24,16 @@ h3
   font-size: @h3_font_size;
 }
 
-h5,
+h4
+{
+  font-size: @h4_font_size;
+}
+
+h5
+{
+  font-size: @h5_font_size;
+}
+
 .detail,
 .notes,
 .info-box-bottom,
