--- a/site/resources/styles/core/grid.less
+++ b/site/resources/styles/core/grid.less
@@ -16,8 +16,8 @@
 
     vertical-align: top;
 
-    margin-right: @standard_spacing;
-    margin-bottom: @standard_spacing;
+    margin-right: 2 * @standard_spacing;
+    margin-bottom: 2 * @standard_spacing;
   }
 
   > div
