Update responsive styles to apply to all media

--- a/site/resources/styles/core/core-mixins.less
+++ b/site/resources/styles/core/core-mixins.less
@@ -227,7 +227,7 @@
 {
   @viewport_min_width: (@base_width * @i);
 
-  @media screen and (min-width: @viewport_min_width)
+  @media (min-width: @viewport_min_width)
   {
     width: 100% / (@i + 1);
   }
