--- a/site/resources/styles/core/form-layout-ltr.less
+++ b/site/resources/styles/core/form-layout-ltr.less
@@ -1,7 +1,7 @@
 @import "core-values";
 @import "form-values";
 
-@media screen and (min-width: @min-width-for-columns)
+@media (min-width: @min-width-for-columns)
 {
   .basic-form.ltr
   {
