--- a/site/resources/styles/core/text.less
+++ b/site/resources/styles/core/text.less
@@ -200,7 +200,7 @@ pre > code,
   line-height: @text_flow_line_height;
   text-align: left;
 
-  @media screen and (min-width: @min-width-for-columns)
+  @media (min-width: @min-width-for-columns)
   {
     &.wide
     {
