--- a/site/resources/styles/themes/tan.css
+++ b/site/resources/styles/themes/tan.css
@@ -65,7 +65,6 @@ body {
   position: relative;
   top: 0px;
 }
-h4,
 pre,
 .button,
 .menu {
@@ -81,7 +80,12 @@ h2 {
 h3 {
   font-size: 140%;
 }
-h5,
+h4 {
+  font-size: 100%;
+}
+h5 {
+  font-size: 100%;
+}
 .detail,
 .notes,
 .info-box-bottom,
@@ -707,6 +711,12 @@ h4 {
 h4 code {
   color: #eb9649;
 }
+h5 {
+  color: #eb9649;
+}
+h5 code {
+  color: #eb9649;
+}
 p {
   margin: 15px 0;
 }
@@ -835,7 +845,7 @@ pre > code .attribute-value,
   line-height: 160%;
   text-align: left;
 }
-@media screen and (min-width: 600px) {
+@media (min-width: 600px) {
   .text-flow.wide {
     column-width: 35em;
     -webkit-column-width: 35em;
@@ -1471,202 +1481,202 @@ table.panels td {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-@media screen and (min-width: 450px) {
+@media (min-width: 450px) {
   .grid > div {
     width: 50%;
   }
 }
-@media screen and (min-width: 900px) {
+@media (min-width: 900px) {
   .grid > div {
     width: 33.33333333%;
   }
 }
-@media screen and (min-width: 1350px) {
+@media (min-width: 1350px) {
   .grid > div {
     width: 25%;
   }
 }
-@media screen and (min-width: 1800px) {
+@media (min-width: 1800px) {
   .grid > div {
     width: 20%;
   }
 }
-@media screen and (min-width: 2250px) {
+@media (min-width: 2250px) {
   .grid > div {
     width: 16.66666667%;
   }
 }
-@media screen and (min-width: 2700px) {
+@media (min-width: 2700px) {
   .grid > div {
     width: 14.28571429%;
   }
 }
-@media screen and (min-width: 3150px) {
+@media (min-width: 3150px) {
   .grid > div {
     width: 12.5%;
   }
 }
-@media screen and (min-width: 3600px) {
+@media (min-width: 3600px) {
   .grid > div {
     width: 11.11111111%;
   }
 }
-@media screen and (min-width: 4050px) {
+@media (min-width: 4050px) {
   .grid > div {
     width: 10%;
   }
 }
-@media screen and (min-width: 4500px) {
+@media (min-width: 4500px) {
   .grid > div {
     width: 9.09090909%;
   }
 }
-@media screen and (min-width: 200px) {
+@media (min-width: 200px) {
   .grid.tiny-tiles > div {
     width: 50%;
   }
 }
-@media screen and (min-width: 400px) {
+@media (min-width: 400px) {
   .grid.tiny-tiles > div {
     width: 33.33333333%;
   }
 }
-@media screen and (min-width: 600px) {
+@media (min-width: 600px) {
   .grid.tiny-tiles > div {
     width: 25%;
   }
 }
-@media screen and (min-width: 800px) {
+@media (min-width: 800px) {
   .grid.tiny-tiles > div {
     width: 20%;
   }
 }
-@media screen and (min-width: 1000px) {
+@media (min-width: 1000px) {
   .grid.tiny-tiles > div {
     width: 16.66666667%;
   }
 }
-@media screen and (min-width: 1200px) {
+@media (min-width: 1200px) {
   .grid.tiny-tiles > div {
     width: 14.28571429%;
   }
 }
-@media screen and (min-width: 1400px) {
+@media (min-width: 1400px) {
   .grid.tiny-tiles > div {
     width: 12.5%;
   }
 }
-@media screen and (min-width: 1600px) {
+@media (min-width: 1600px) {
   .grid.tiny-tiles > div {
     width: 11.11111111%;
   }
 }
-@media screen and (min-width: 1800px) {
+@media (min-width: 1800px) {
   .grid.tiny-tiles > div {
     width: 10%;
   }
 }
-@media screen and (min-width: 2000px) {
+@media (min-width: 2000px) {
   .grid.tiny-tiles > div {
     width: 9.09090909%;
   }
 }
-@media screen and (min-width: 300px) {
+@media (min-width: 300px) {
   .grid.small-tiles > div {
     width: 50%;
   }
 }
-@media screen and (min-width: 600px) {
+@media (min-width: 600px) {
   .grid.small-tiles > div {
     width: 33.33333333%;
   }
 }
-@media screen and (min-width: 900px) {
+@media (min-width: 900px) {
   .grid.small-tiles > div {
     width: 25%;
   }
 }
-@media screen and (min-width: 1200px) {
+@media (min-width: 1200px) {
   .grid.small-tiles > div {
     width: 20%;
   }
 }
-@media screen and (min-width: 1500px) {
+@media (min-width: 1500px) {
   .grid.small-tiles > div {
     width: 16.66666667%;
   }
 }
-@media screen and (min-width: 1800px) {
+@media (min-width: 1800px) {
   .grid.small-tiles > div {
     width: 14.28571429%;
   }
 }
-@media screen and (min-width: 2100px) {
+@media (min-width: 2100px) {
   .grid.small-tiles > div {
     width: 12.5%;
   }
 }
-@media screen and (min-width: 2400px) {
+@media (min-width: 2400px) {
   .grid.small-tiles > div {
     width: 11.11111111%;
   }
 }
-@media screen and (min-width: 2700px) {
+@media (min-width: 2700px) {
   .grid.small-tiles > div {
     width: 10%;
   }
 }
-@media screen and (min-width: 3000px) {
+@media (min-width: 3000px) {
   .grid.small-tiles > div {
     width: 9.09090909%;
   }
 }
-@media screen and (min-width: 600px) {
+@media (min-width: 600px) {
   .grid.large-tiles > div {
     width: 50%;
   }
 }
-@media screen and (min-width: 1200px) {
+@media (min-width: 1200px) {
   .grid.large-tiles > div {
     width: 33.33333333%;
   }
 }
-@media screen and (min-width: 1800px) {
+@media (min-width: 1800px) {
   .grid.large-tiles > div {
     width: 25%;
   }
 }
-@media screen and (min-width: 2400px) {
+@media (min-width: 2400px) {
   .grid.large-tiles > div {
     width: 20%;
   }
 }
-@media screen and (min-width: 3000px) {
+@media (min-width: 3000px) {
   .grid.large-tiles > div {
     width: 16.66666667%;
   }
 }
-@media screen and (min-width: 3600px) {
+@media (min-width: 3600px) {
   .grid.large-tiles > div {
     width: 14.28571429%;
   }
 }
-@media screen and (min-width: 4200px) {
+@media (min-width: 4200px) {
   .grid.large-tiles > div {
     width: 12.5%;
   }
 }
-@media screen and (min-width: 4800px) {
+@media (min-width: 4800px) {
   .grid.large-tiles > div {
     width: 11.11111111%;
   }
 }
-@media screen and (min-width: 5400px) {
+@media (min-width: 5400px) {
   .grid.large-tiles > div {
     width: 10%;
   }
 }
-@media screen and (min-width: 6000px) {
+@media (min-width: 6000px) {
   .grid.large-tiles > div {
     width: 9.09090909%;
   }
@@ -1743,7 +1753,7 @@ table.panels td {
   max-height: 300px;
   overflow-y: auto;
 }
-@media screen and (min-width: 600px) {
+@media (min-width: 600px) {
   .columns {
     display: -webkit-flex;
     display: -moz-flex;
@@ -2265,7 +2275,7 @@ select {
 .basic-form fieldset legend {
   margin-left: -4px;
 }
-@media screen and (min-width: 600px) {
+@media (min-width: 600px) {
   .basic-form.ltr fieldset {
     margin-left: 135px;
   }
